--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,11 @@ body{
 .result-section{
     background-image:linear-gradient(45deg,hsl(252, 100%, 67%),hsl(241, 81%, 54%));
     color:white;
-    border-radius: 10px;
+    border-radius: 30px;
     width:50%
+}
+.result-section h1{
+    color: rgb(152, 127, 221);
 }
 .result-text{
     text-align: center;
@@ -28,7 +31,7 @@ h1{
     color:hsl(224, 30%, 27%) ;
 }
 .result-circle{
-    background-image: linear-gradient(45deg,hsla(256, 72%, 46%, 1),hsla(241, 72%, 46%, 0));
+    background-image: linear-gradient(150deg,hsla(256, 72%, 46%, 1),hsla(241, 72%, 46%, 0));
 }
 .result-circle .bold-num{
     font-size: 3.5em;
@@ -37,7 +40,7 @@ h1{
 .summary-section{
     background-color: hsl(0, 0%, 100%);
 }
-.summary-container{}
+
 .reaction{
     background-color:hsla(0, 100%, 67%,10%) ;
 }
@@ -67,20 +70,25 @@ h1{
     font-weight: bold;
 }
 .summary-num2{
-    color:hsla(234, 85%, 45%,30%) ;
+    color:rgb(167, 164, 164) ;
     font-weight: bold;
+}
+button:hover{
+    cursor: pointer;
+    background-image:linear-gradient(45deg,hsl(252, 100%, 67%),hsl(241, 81%, 54%));
 }
 /*------LAYOUT---------*/
 .outer-container{
     display:flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
     
 }
 .inner-container{
-    width: 65%;
-    max-width: 550px;
+    width: 90%;
+    max-width: 600px;
     display: flex;
     justify-content: center;
   
@@ -142,10 +150,26 @@ h1{
 }
 button{
     margin-top: 1.5rem;
-    padding: 0.625rem;
+    padding: 0.825rem;
     border-radius: 2rem;
     width: 100%;
     background-color: hsl(224, 30%, 27%);
     color: white;
     border: none;
+}
+.attribution{
+    margin-top:1.5rem
+}
+
+@media screen and (max-width:600px){
+    .inner-container{
+        display: flex;
+        flex-direction: column;
+    }
+    .result-section{
+        width:100%;
+    }
+    .summary-section{
+        width:100%;
+    }
 }
